# Freyja

./: LICENSE.md  README.md  pyproject.toml
freyja/: __init__.py  fastwalshtransform.py
tests/: test_fastwalshtransform.py
