[tool.poetry]
name = "freyja"
version = "0.1.0"
description = ""
authors = ["Per Liebermann <pjlieb@protonmail.com>"]
license = "LICENSE.md"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.13"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
